# medal2

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  script.lua
ast/: Cargo.toml
ast/src/: assign.rs  binary.rs  break.rs  call.rs  close.rs  closure.rs  continue.rs  for.rs  formatter.rs  global.rs  goto.rs  if.rs  index.rs  lib.rs  literal.rs  local.rs  local_declarations.rs  name_gen.rs  name_locals.rs  paste.txt  repeat.rs  replace_locals.rs  return.rs  set_list.rs  side_effects.rs  table.rs  traverse.rs  type_system.rs  unary.rs  vararg.rs  while.rs
cfg/: Cargo.toml
cfg/src/: block.rs  dot.rs  function.rs  lib.rs  pattern.rs  ssa.rs
cfg/src/ssa/: construct.rs  destruct.rs  inline.rs  param_dependency_graph.rs  structuring.rs  upvalues.rs
cfg/src/ssa/destruct/: liveness.rs
decomp-server/: Cargo.toml  Untitled-1.lua
decomp-server/src/: main.rs
lua51-deserializer/: Cargo.toml
lua51-deserializer/src/: function.rs  lib.rs  local.rs  value.rs
lua51-deserializer/src/chunk/: header.rs  mod.rs
lua51-deserializer/src/instruction/: argument.rs  layout.rs  mod.rs  operation_code.rs  position.rs
lua51-lifter/: Cargo.toml
lua51-lifter/src/: lifter.rs  main.rs
luau-lifter/: Cargo.toml
luau-lifter/src/: instruction.rs  lib.rs  lifter.rs  main.rs  op_code.rs
luau-lifter/src/deserializer/: bytecode.rs  chunk.rs  constant.rs  function.rs  list.rs  mod.rs
luau-worker/: Cargo.toml  wrangler.toml
luau-worker/src/: lib.rs
restructure/: Cargo.toml
restructure/src/: conditional.rs  jump.rs  lib.rs  loop.rs
