[package]
name = "ast"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
derive_more = "0.99.17"
enum-as-inner = "0.5.1"
itertools = "0.10.5"
enum_dispatch = "0.3.8"
by_address = "1.1.0"
rustc-hash = "1.1.0"
indexmap = "1.9.1"
petgraph = { git = "https://github.com/jujhar16/petgraph.git", branch = "ensure_len_resize_with" }
array_tool = "1.0.3"
itoa = "1.0.4"
ryu = "1.0.11"
nohash-hasher = "0.2.0"
triomphe = "0.1.8"
parking_lot = "0.12.1"