[package]
name = "decomp-server"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
base64 = "0.13"
luau-lifter = { path = "../luau-lifter" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "*"
futures-util = "*"
log = "*"
env_logger = "*"
