[package]
name = "lua51-lifter"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
num_enum = "0.5.7"
nom = "7.1.1"
clap = { version = "4.0.10", features = ["derive"] }
anyhow = { version = "1.0.65", features = ["backtrace"] }
cfg = { path = "../cfg" }
lua51-deserializer = { path = "../lua51-deserializer" }
# graph = { path = "../graph", features = ["dot"] }
petgraph = { git = "https://github.com/jujhar16/petgraph.git", branch="ensure_len_resize_with" }
indexmap = "1.9.1"
ast = { path = "../ast" }
dhat = "0.3.1"
rustc-hash = "1.1.0"
either = "1.8.0"
restructure = { path = "../restructure" }
enum-as-inner = "0.5.1"
itertools = "0.10.5"
by_address = "1.1.0"
rayon = "1.5.3"
triomphe = "0.1.8"
parking_lot = "0.12.1"

[features]
dhat-heap = []
panic-handled = []